feat: add method to remove a token
